Fixed overflow on hero

--- a/src/AppBundle/Resources/public/sass/page/corporate.scss
+++ b/src/AppBundle/Resources/public/sass/page/corporate.scss
@@ -25,6 +25,7 @@ body {
 .corporate-hero {
     position: relative;
     overflow-y: hidden;
+    overflow-x: hidden;
     min-height: 500px;
 
     background-color: $white;
